# xllm-ops

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_zh.md  build.sh  pre-commit-config.yaml
replace_token/PytorchInvocation/: CMakeLists.txt  README.md  build.sh  replace_token_op.cpp  run_op_plugin.sh  test_ops_custom.cpp  test_ops_custom.py  test_ops_custom_register_in_graph.py
replace_token/PytorchInvocation/op_plugin_patch/: ReplaceTokenKernelNpuApi.cpp  op_plugin_functions.yaml
replace_token/replace_token/op_kernel/: CMakeLists.txt  replace_token.cpp  replace_token.h
replace_token/test/: CMakeLists.txt  run.sh  test_replace_token.cpp
replace_token/test/scripts/: gen_data.py  gen_data_copy.py  read_file.py  verify.sh  verify_result.py
src/: CMakeLists.txt
src/apply_top_k_top_p_with_sorted/: CMakeLists.txt  README.md
src/apply_top_k_top_p_with_sorted/op_host/: aclnn_apply_top_k_top_p.cpp  aclnn_apply_top_k_top_p.h  apply_top_k_top_p_with_sorted.cpp  apply_top_k_top_p_with_sorted_l0.cpp  apply_top_k_top_p_with_sorted_l0.h  apply_top_k_top_p_with_sorted_tiling.cc  apply_top_k_top_p_with_sorted_tiling.h  sort.cpp  sort.h
src/apply_top_k_top_p_with_sorted/op_kernel/: apply_top_k_top_p_with_sorted.cpp  apply_top_k_top_p_with_sorted.h
src/pp_mat_mul/op_host/: pp_mat_mul_default.cpp
src/replace_token/: CMakeLists.txt
src/replace_token/op_host/: replace_token.cpp  replace_token_tiling.h
src/replace_token/op_kernel/: replace_token.cpp  replace_token.h
test/cpp_test/: CMakeLists.txt  beam_search.h  beam_search_test.cpp  group_gemm.h  group_gemm_test.cpp  multi_latent_attention.h  multi_latent_attention_test.cpp  pp_matmul.h  pp_matmul_test.cpp  x_attention_tl.h
xllm_ops/beam_search/: CMakeLists.txt  beam_search.cpp  beam_search.h  beam_search_cpu.cpp  beam_search_tiling.h
xllm_ops/beam_search/op_host/: CMakeLists.txt  beam_search_def.cpp  beam_search_proto.cpp  beam_search_tiling.cpp  beam_search_tiling.h
xllm_ops/beam_search/op_kernel/: beam_search.h
xllm_ops/beam_search_group/: CMakeLists.txt  beam_search_group.cpp  beam_search_group.h  beam_search_group_cpu.cpp  beam_search_group_tiling.h
xllm_ops/beam_search_group/op_host/: CMakeLists.txt  beam_search_group_def.cpp  beam_search_group_proto.cpp  beam_search_group_tiling.cpp  beam_search_group_tiling.h
xllm_ops/beam_search_group/op_kernel/: beam_search_group.cpp  beam_search_group.h
xllm_ops/gamma_add_rms_norm/: CMakeLists.txt  README.md
xllm_ops/gamma_add_rms_norm/norm_common/: reduce_common_regbase.h
xllm_ops/gamma_add_rms_norm/op_host/: CMakeLists.txt  gamma_add_rms_norm_def.cpp  gamma_add_rms_norm_error_log.h  gamma_add_rms_norm_infershape.cpp  gamma_add_rms_norm_tiling.cpp  gamma_add_rms_norm_tiling.h  gamma_add_rms_norm_tiling_arch35.cpp  gamma_add_rms_norm_tiling_arch35.h
xllm_ops/gamma_add_rms_norm/op_kernel/: gamma_add_rms_norm.cpp  gamma_add_rms_norm.h  gamma_add_rms_norm_apt.cpp  gamma_add_rms_norm_base.h  gamma_add_rms_norm_merge_n.h  gamma_add_rms_norm_multi_n.h  gamma_add_rms_norm_single_n.h  gamma_add_rms_norm_split_d.h  reduce_common.h
xllm_ops/lightning_indexer/: CMakeLists.txt  lightning_indexer_common.h  lightning_indexer_cpu.cpp  lightning_indexer_kernel.h  lightning_indexer_proto.cpp  lightning_indexer_service_cube.h  lightning_indexer_service_vector.h  lightning_indexer_template_tiling_key.h  lightning_indexer_tiling.cpp  lightning_indexer_tiling.h  lightning_indexer_vector.h
xllm_ops/lightning_indexer/error/: ops_error.h
xllm_ops/mla_preprocess/: CMakeLists.txt
xllm_ops/mla_preprocess/op_host/: CMakeLists.txt  mla_preprocess_def.cpp  mla_preprocess_proto.cpp  mla_preprocess_tiling.cpp  mla_preprocess_tiling.h  mla_preprocess_tilingdata.h
xllm_ops/mla_preprocess/op_kernel/: gm_to_l1_iterator.h  gm_to_ub_iterator.h  l0c_to_gm_iterator.h  l0c_to_l1_iterator.h  l0c_to_ub_iterator.h  mla_iterator.h  (+9 more)
xllm_ops/moe_grouped_matmul/: CMakeLists.txt  aclnn_moe_grouped_matmul.cpp  aclnn_moe_grouped_matmul_weight_nz.h  moe_grouped_matmul.h  moe_grouped_matmul_cpu.cpp  moe_grouped_matmul_tiling.h
xllm_ops/multi_latent_attention/: CMakeLists.txt  common.h  compare.h  math.cpp  math.h  multi_latent_attention.cpp  multi_latent_attention.h  multi_latent_attention_cpu.cpp  multi_latent_attention_npu.h  multi_latent_attention_tiling.h  multi_latent_attention_tiling_dependency.cpp  multi_latent_attention_tiling_dependency.h  multi_latent_attention_tiling_impl.cpp  multi_latent_attention_tiling_impl.h
xllm_ops/onerec_final_beam_select/: CMakeLists.txt  onerec_final_beam_select.cpp  onerec_final_beam_select.h  onerec_final_beam_select_cpu.cpp  onerec_final_beam_select_tiling.h
xllm_ops/recurrent_gated_delta_rule/: CMakeLists.txt  aclnn_recurrent_gated_delta_rule.cpp  aclnn_recurrent_gated_delta_rule.h  recurrent_gated_delta_rule.cpp  recurrent_gated_delta_rule_def.cpp  recurrent_gated_delta_rule_infershape.cpp  recurrent_gated_delta_rule_tiling.cpp  recurrent_gated_delta_rule_tiling.h
xllm_ops/select_unshared_kv/: CMakeLists.txt  select_unshared_kv.cpp  select_unshared_kv.h  select_unshared_kv_cpu.cpp  select_unshared_kv_tiling.h
xllm_ops/sparse_flash_attention/: CMakeLists.txt  sparse_flash_attention_common.h  sparse_flash_attention_def.cpp  sparse_flash_attention_kernel_mla.h  sparse_flash_attention_proto.cpp  sparse_flash_attention_service_vector_mla.h  sparse_flash_attention_template_tiling_key.h  sparse_flash_attention_tiling.cpp
xllm_ops/x_attention/: CMakeLists.txt  x_attention.cpp  x_attention.h  x_attention_catlass_helper.h  x_attention_catlass_kernel.h  x_attention_cpu.cpp  x_attention_tiling.h
xllm_ops/x_attention_tl/: CMakeLists.txt  x_attention_tl.cpp  x_attention_tl.h  x_attention_tl_cpu.cpp  x_attention_tl_tiling.h
xllm_ops/x_flash_attention_infer/: CMakeLists.txt  x_flash_attention_infer.cpp  x_flash_attention_infer.h  x_flash_attention_infer_common.h  x_flash_attention_infer_cpu.cpp  x_flash_attention_infer_fd.h  x_flash_attention_infer_tiling.h
(+680 files in other folders)
